<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button_text">Scan</string>
    <string name="clear_button_text">Clear</string>
    <string name="power_level_label_text">dBm</string>
    <string name="use_fast_id_title">Fast Id</string>
    <string name="tag_list_title">Transponders</string>
    <string name="barcode_list_title">Barcodes</string>

</resources>
